--- a/src/components/Payment/Payment.css
+++ b/src/components/Payment/Payment.css
@@ -12,6 +12,10 @@
 
 .right {
     width: 50%;
+   
+}
+.payment-right {
+    height: auto;
 }
 
 .payment-method-title {
@@ -174,4 +178,42 @@
     line-height: 25.6px; /* 128% */
     letter-spacing: -0.2px;
 
+}
+.button-group-payment {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+}
+.billing-address-container {
+    border-radius: 7px;
+    border: 1px solid #E5E5E5;
+    padding: 22px 18px 20px 17px;
+}
+.billing-address-container label {
+    color: var(--black, #272727);
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Helvetica;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15.6px; /* 111.429% */
+    
+} 
+
+.billing-address-container hr {
+    margin-top: 21px;
+    margin-bottom: 21px;
+} 
+.shipping-address-radio {
+    margin-right: 23px;
+}
+
+.billing-address-container div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
